--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<footer class= "page-footer font-small bg-secondary pt-4">
+<footer class= "page-footer font-small bg-primary pt-4">
 
     <div class="container">
 
@@ -36,7 +36,7 @@
 
     </div>
 
-<div class="footer-copyright bg-dark text-center py-3">
+<div class="footer-copyright bg-secondary text-center py-3">
 <span class="text-light"> © 2020 Copyright: Victória Faria</span>
 </div>
 
